# kairix_todo

./: .gitignore  CLAUDE.md  README.md  design-doc.txt  openapi.json  pyproject.toml
android/: README.md  pull_request_template.md
android/docs/: system_design.md  ui_mockups.md  user_stories.md
design/: simplified_search.md
src/kairix_todo/: app.py  models.py
src/kairix_todo/controller/: search_controller.py  tag_controller.py  task_controller.py
src/kairix_todo/models/: tag.py  task.py
src/kairix_todo/templates/: web_app.html
src/kairix_todo/utils/: auth.py  search_utils.py
tests/: conftest.py  test_api_key_auth.py  test_models.py
tests/controller/: test_search_controller.py  test_tag_controller.py  test_task_controller.py
tests/models/: test_tag.py  test_task.py
tests/utils/: test_search_utils.py
~/.cline/: cline_mcp_settings.json
